[gd_scene load_steps=12 format=2]

[ext_resource path="res://Assets/Fonts/Cave-Story.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://Assets/Styles/hover_options_menu.tres" type="StyleBox" id=2]
[ext_resource path="res://Assets/Images/background.png" type="Texture" id=3]
[ext_resource path="res://Scripts/Game/FinalScene.gd" type="Script" id=4]
[ext_resource path="res://Assets/Audio/Background_music.ogg" type="AudioStream" id=5]

[sub_resource type="DynamicFont" id=1]
size = 32
outline_size = 3
outline_color = Color( 0.0666667, 0.211765, 0.0509804, 1 )
font_data = ExtResource( 1 )

[sub_resource type="Theme" id=2]
default_font = SubResource( 1 )

[sub_resource type="StyleBoxEmpty" id=3]

[sub_resource type="DynamicFont" id=4]
size = 30
font_data = ExtResource( 1 )

[sub_resource type="StyleBoxEmpty" id=5]

[sub_resource type="StyleBoxFlat" id=6]
bg_color = Color( 0.141176, 0.215686, 0.239216, 1 )
border_width_left = 4
border_width_top = 4
border_width_right = 4
border_width_bottom = 4
border_color = Color( 0.443137, 0.490196, 0.341176, 1 )
corner_radius_top_left = 2
corner_radius_top_right = 2
corner_radius_bottom_right = 2
corner_radius_bottom_left = 2

[node name="FinalScene" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 4 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Background" type="TextureRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_bottom = 424.0
rect_scale = Vector2( 1, 0.585 )
texture = ExtResource( 3 )
stretch_mode = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="FadeOverlay" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0, 0, 0, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MarginContainer" type="MarginContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
margin_right = 1024.0
margin_bottom = 600.0
custom_constants/separation = 50

[node name="TheEnd" type="Label" parent="MarginContainer/VBoxContainer"]
margin_right = 1024.0
margin_bottom = 20.0
theme = SubResource( 2 )
text = "The End"
align = 1
valign = 1

[node name="CenterContainer" type="CenterContainer" parent="MarginContainer/VBoxContainer"]
margin_top = 70.0
margin_right = 1024.0
margin_bottom = 422.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/VBoxContainer/CenterContainer"]
margin_left = 212.0
margin_right = 812.0
margin_bottom = 352.0
custom_constants/separation = 25

[node name="HSeparator" type="HSeparator" parent="MarginContainer/VBoxContainer/CenterContainer/VBoxContainer"]
margin_right = 600.0
margin_bottom = 60.0
custom_styles/separator = SubResource( 3 )
custom_constants/separation = 60

[node name="MainMessage" type="RichTextLabel" parent="MarginContainer/VBoxContainer/CenterContainer/VBoxContainer"]
margin_top = 85.0
margin_right = 600.0
margin_bottom = 285.0
rect_min_size = Vector2( 600, 200 )
theme = SubResource( 2 )
custom_fonts/normal_font = SubResource( 4 )
bbcode_enabled = true
bbcode_text = "Thanks for trying this out!

This short experience was part of a dialog system prototype
developed for my master's thesis titled *Analysing Dialog Systems in Story-Driven Games*.

The game will be expanded in future versions."
text = "Thanks for trying this out!

This short experience was part of a dialog system prototype
developed for my master's thesis titled *Analysing Dialog Systems in Story-Driven Games*.

The game will be expanded in future versions."
fit_content_height = true

[node name="CreditLine" type="RichTextLabel" parent="MarginContainer/VBoxContainer/CenterContainer/VBoxContainer"]
margin_top = 310.0
margin_right = 600.0
margin_bottom = 352.0
theme = SubResource( 2 )
bbcode_enabled = true
bbcode_text = "Dialog System Prototype – Master’s Thesis, Beeshoy Metry, University of Klagenfurt, 2025"
text = "Dialog System Prototype – Master’s Thesis, Beeshoy Metry, University of Klagenfurt, 2025"
fit_content_height = true

[node name="HSeparator" type="HSeparator" parent="MarginContainer/VBoxContainer"]
margin_top = 472.0
margin_right = 1024.0
margin_bottom = 480.0
custom_styles/separator = SubResource( 5 )
custom_constants/separation = 8

[node name="Exit_Button" type="Button" parent="MarginContainer/VBoxContainer"]
margin_top = 530.0
margin_right = 1024.0
margin_bottom = 552.0
custom_styles/hover = ExtResource( 2 )
custom_styles/normal = SubResource( 6 )
text = "Exit"

[node name="Tween" type="Tween" parent="."]

[node name="EndingAudio" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 5 )

[connection signal="pressed" from="MarginContainer/VBoxContainer/Exit_Button" to="." method="_on_Exit_Button_pressed"]
